--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -30,7 +30,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        fedora_version: [40]
+        fedora_version: [40, 41]
         nvidia_version: [stable, beta]
         cfile_suffix:
           - nvidia
