--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -14,6 +14,7 @@ env:
   IMAGE_BASE_NAME: nvidia-kmod
   IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
   KERNEL_NAME: kernel-cachyos-lts
+  PERSONAL_REPO_OVERRIDE: true
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}-${{ inputs.fedora_version }}
@@ -150,6 +151,7 @@ jobs:
             KERNEL_NAME=${{ env.KERNEL_NAME }}
             KERNEL_MODULE_TYPE=${{ matrix.module_type }}
             NVIDIA_VERSION=${{ matrix.nvidia_version }}
+            USE_PERSONAL_REPO=${{ env.PERSONAL_REPO_OVERRIDE }}
           labels: ${{ steps.meta.outputs.labels }}
           oci: false
 
