--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -13,8 +13,8 @@ on:
 env:
   IMAGE_BASE_NAME: nvidia-kmod
   IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
-  KERNEL_NAME: kernel-cachyos-lts
-  PERSONAL_REPO_OVERRIDE: true
+  KERNEL_NAME: kernel-cachyos
+  PERSONAL_REPO_OVERRIDE: false
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}-${{ inputs.fedora_version }}
