--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -31,7 +31,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        fedora_version: [41]
+        fedora_version: [41, 42]
         nvidia_version: [stable, beta]
         module_type: [kernel, kernel-open]
 
