--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -14,7 +14,7 @@ env:
   IMAGE_BASE_NAME: nvidia-kmod
   IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
   KERNEL_NAME: kernel-cachyos
-  PERSONAL_REPO_OVERRIDE: false
+  PERSONAL_REPO_OVERRIDE: true
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}-${{ inputs.fedora_version }}
